# projeto

./: .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  ecosystem.config.cjs  package-lock.json  package.json
admin/: app.js  index.html  motorista.css  motorista.html  styles.css
admin-app/: app.js  index.html  main.js  package-lock.json  package.json  styles.css
backend/: .env.example  package.json
backend-python/: .env.example  app.py  config.py  requirements.txt  run.py
backend-python/data/: ets2.sqlite
backend-python/database/: db.py  schema.sql
backend-python/middlewares/: auth.py
backend-python/routes/: admin_routes.py  auth_routes.py  freight_routes.py  telemetry_routes.py
backend-python/websocket/: socket_hub.py
backend/src/: app.js  config.js  server.js
backend/src/database/: db.js  schema.sql
backend/src/middlewares/: auth.js  errorHandler.js
backend/src/routes/: adminRoutes.js  authRoutes.js  freightRoutes.js  healthRoutes.js  telemetryRoutes.js
backend/src/scripts/: seedAdmin.js
backend/src/services/: authService.js  freightService.js  logService.js  telemetryService.js  userService.js
backend/src/utils/: serialize.js
backend/src/websocket/: wsHub.js
client/: package.json
client/src/: main.js  preload.js  saveEditor.js  telemetryService.js
client/src/overlay/: phone.css  phone.html  phone.js
client/src/renderer/: index.html  renderer.js  styles.css
plugin-dll/: CMakeLists.txt  README.md
plugin-dll/src/: ets2_freight_plugin.cpp
